--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,15 +15,15 @@ repositories {
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
+
 android {
-    compileSdkVersion 28
+    compileSdkVersion 26
     defaultConfig {
         applicationId "com.yunbu.apptest"
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 26
         versionCode 102
         versionName "1.0.2"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         manifestPlaceholders = [
                 onesignal_app_id: '8f97fcfd-53f9-4518-98bc-b54765cd7e8a',
@@ -66,48 +66,45 @@ dependencies {
     //implementation(name: 'unity-ads', ext: 'aar')
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
-
     //Mopub
-    implementation('com.mopub:mopub-sdk:5.6.0@aar') {
+    /*implementation('com.mopub:mopub-sdk:5.6.0@aar') {
+        transitive = true
+    }*/
+    implementation('com.mopub:mopub-sdk:+@aar') {
         transitive = true
     }
     implementation 'com.mopub.volley:mopub-volley:2.1.0'
     // Facebook Audience Network
-    implementation 'com.facebook.android:audience-network-sdk:5.3.0'
-    implementation 'com.mopub.mediation:facebookaudiencenetwork:5.3.0.0'
-// Google (AdMob)
-    implementation 'com.google.android.gms:play-services-ads:17.2.0'
-    implementation 'com.mopub.mediation:admob:17.2.0.1'
-// ironSource
-    implementation 'com.ironsource.sdk:mediationsdk:6.8.3@jar'
-    implementation 'com.mopub.mediation:ironsource:6.8.3.0'
-// Unity Ads
-    implementation 'com.unity3d.ads:unity-ads:3.0.1'
-    implementation 'com.mopub.mediation:unityads:3.0.1.3'
-// Vungle
+    implementation 'com.facebook.android:audience-network-sdk:5.4.0'
+    implementation 'com.mopub.mediation:facebookaudiencenetwork:5.4.0.0'
+    // Google (AdMob)
+    implementation 'com.google.android.gms:play-services-ads:17.2.1'
+    implementation 'com.mopub.mediation:admob:17.2.1.0'
+    // ironSource
+    implementation 'com.ironsource.sdk:mediationsdk:6.8.4@jar'
+    implementation 'com.mopub.mediation:ironsource:6.8.4.0'
+    // Unity Ads
+    implementation 'com.unity3d.ads:unity-ads:3.1.0'
+    implementation 'com.mopub.mediation:unityads:3.1.0.0'
+    // Vungle
     implementation 'com.github.vungle:vungle-android-sdk:6.3.24'
     implementation 'com.mopub.mediation:vungle:6.3.24.2'
-
     //支付
     implementation 'com.yifants.sdk:purchase-utils:1.3.3'
     implementation 'com.android.billingclient:billing:1.2'
     implementation 'com.google.android.gms:play-services-basement:16.1.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
-
     //GameAnalytics
     implementation 'com.gameanalytics.sdk:gameanalytics-android:3.4.2'
-
     //Adjust
     implementation 'com.adjust.sdk:adjust-android:4.17.0'
     implementation 'com.android.installreferrer:installreferrer:1.0'
     implementation 'com.google.android.gms:play-services-analytics:16.0.8'
-
-
     //Facebook
-    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
-    implementation 'com.facebook.android:facebook-login:[4,5)'
-    implementation 'com.facebook.android:facebook-share:[4,5)'
-
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+    implementation 'com.facebook.android:facebook-login:[5,6)'
+    implementation 'com.facebook.android:facebook-share:[5,6)'
     //Onesignal
     implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
+
 }
