--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,11 +17,11 @@ apply plugin: 'com.google.gms.google-services'
 
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.yunbu.apptest"
-        minSdkVersion 16
-        targetSdkVersion 26
+        minSdkVersion 19
+        targetSdkVersion 28
         versionCode 102
         versionName "1.0.2"
         multiDexEnabled true
@@ -33,12 +33,18 @@ android {
 
     }
 
-    signingConfigs{
+    signingConfigs {
         release {
             storeFile file("../googletest.jks")        //证书存放目录
             storePassword "123456"                               //密码
             keyAlias "'googletest'"                                                //别名
             keyPassword "123456"                                //密码(就是设置证书那两个密码，建议都填一样的)
+        }
+        debug {
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+            storeFile file('C:/Users/11198/.android/debug.keystore')
+            storePassword 'android'
         }
     }
 
@@ -51,6 +57,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+        debug {
+            signingConfig signingConfigs.debug
         }
     }
 }
@@ -65,32 +75,36 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //implementation(name: 'unity-ads', ext: 'aar')
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     //Mopub
     /*implementation('com.mopub:mopub-sdk:5.6.0@aar') {
-        transitive = true
-    }*/
+                    transitive = true
+                }*/
     implementation('com.mopub:mopub-sdk:+@aar') {
         transitive = true
     }
     implementation 'com.mopub.volley:mopub-volley:2.1.0'
-    // Facebook Audience Network
-    implementation 'com.facebook.android:audience-network-sdk:5.4.0'
-    implementation 'com.mopub.mediation:facebookaudiencenetwork:5.4.0.0'
     // Google (AdMob)
-    implementation 'com.google.android.gms:play-services-ads:17.2.1'
-    implementation 'com.mopub.mediation:admob:17.2.1.0'
-    // ironSource
-    implementation 'com.ironsource.sdk:mediationsdk:6.8.4@jar'
-    implementation 'com.mopub.mediation:ironsource:6.8.4.0'
+    implementation 'com.google.android.gms:play-services-ads:18.2.0'
+    implementation 'com.mopub.mediation:admob:18.2.0.1'
+
+    // Facebook Audience Network
+    implementation 'com.facebook.android:audience-network-sdk:5.5.0'
+    implementation 'com.mopub.mediation:facebookaudiencenetwork:5.5.0.4'
+
     // Unity Ads
-    implementation 'com.unity3d.ads:unity-ads:3.1.0'
-    implementation 'com.mopub.mediation:unityads:3.1.0.0'
+    implementation 'com.unity3d.ads:unity-ads:3.2.0'
+    implementation 'com.mopub.mediation:unityads:3.2.0.1'
+
     // Vungle
-    implementation 'com.github.vungle:vungle-android-sdk:6.3.24'
-    implementation 'com.mopub.mediation:vungle:6.3.24.2'
+    implementation 'com.vungle:publisher-sdk-android:6.4.11'
+    implementation 'com.mopub.mediation:vungle:6.4.11.2'
+
+    // ironSource
+    implementation 'com.ironsource.sdk:mediationsdk:6.9.1@jar'
+    implementation 'com.mopub.mediation:ironsource:6.9.1.1'
     //支付
-    implementation 'com.yifants.sdk:purchase-utils:1.3.3'
+    implementation 'com.yifants.sdk:purchase-utils:1.3.7'
     implementation 'com.android.billingclient:billing:1.2'
     implementation 'com.google.android.gms:play-services-basement:16.1.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
@@ -107,4 +121,6 @@ dependencies {
     //Onesignal
     implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
 
+    implementation files('libs/chartboost.jar')
+    implementation 'com.mopub.mediation:chartboost:7.5.0.0'
 }
